<resources>
    <string name="app_name">ADLA</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nombre</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_uname">Usuario (Debe contener 6 o más caracteres)</string>
    <string name="prompt_password">Contraseña (Debe contener 6 o más caracteres)</string>
    <string name="prompt_password2">Confirme Contraseña (Debe coincidir con la primera)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_sign_up_short">Registrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_server">Server Error</string>
    <string name="error_network">No internet connection</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="id_campana">Teclea el id de la campaña</string>
    <string name="title_activity_recuperacion">RecuperacionActivity</string>
    <string name="title_activity_cmedicamento">MedicamentoActivity</string>
    <string name="title_activity_operacion">OperacionActivity</string>
    <string name="title_activity_medicamento">AnestesiaActivity</string>
    <string name="title_activity_panel">PanelActivity</string>
    <string name="title_download_activity">DownloadActivity</string>
    <string name="title_createpdf_activity">CreatePdfActivity</string>
    <string name="title_signup_activity">Sign Up Activity</string>
    <string name="title_register_animal">Registrar</string>
    <string name="title_activity_descargacampaña">Descarga de campaña</string>
    <string name="title_activity_contentpanel">Panel</string>
    <string name="folio_mascota">Folio</string>
    <string name="title_activity_reporte">Reporte de Cirugías</string>
    <string name="title_activity_addurlsheet">Id de campaña</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="save_new_user_bottom">Registrar</string>
    <string name="save_dosis">Guardar</string>

    <string name="action_settings">Instrucciones</string>
    <string name="action_exit">Exit</string>
    <string name="action_comments">Comentarios...</string>

    <!-- Strings related to register animal -->
    <string name="name_register">Nombre</string>
    <string name="address_register">Dirección</string>
    <string name="phone_register">Teléfono</string>
    <string name="email_register">Email</string>
    <string name="name_animal_register">Nombre de la mascota</string>
    <string name="animal_race_register">Raza (o raza aproximada)</string>
    <string name="age_register">Edad de la mascota</string>
    <string name="coments_register">Comentarios</string>
    <string name="surgery_register">Si ha recibido tratamientos médicos o se ha sometido a alguna cirugía por favor indique la fecha y el tipo de tratamiento o cirugía</string>
    <string name="rescued_time_register">Si es rescatado, ¿Cuánto tiempo tiene de rescatado?</string>
    <string name="time_vaccine_register">Fecha de su última vacuna</string>
    <string name="time_deprivation_register">Fecha de su última desparasitación</string>
    <string name="last_zeal_register">Si es hembra indicanos cuándo fué su ultimo celo</string>
    <string name="time_breastfeed_register">Si ha tenido cachorros recientemente cuanto tiempo tiene sin lactar</string>
    <string name="weight_pet">Peso de la mascota</string>
    <string name="medicamento_dosis">Dosis 1</string>
    <string name="medicamento_dosis2">Dosis 2</string>
    <string name="medicamento_dosis3">Dosis 3</string>
    <string name="busqueda_registro">Id Registro</string>
    <string name="title_activity_instrucciones">Instrucciones</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_home">Registra</string>
    <string name="title_dashboard">Medicamento</string>
    <string name="title_notifications">Reporte</string>
    <string name="title_search">Buscar Preregistro</string>
    <string name="title_pets">Cargar Mascotas Entregadas</string>

    <string name="title_antibiotico">Antibiótico</string>
    <string name="title_tatuaje">Tatuaje</string>
    <string name="title_analgesico">Analgésico</string>
    <string name="title_suero">Suero</string>
    <string name="title_cicatrizante">Cicatrizante</string>
    <string name="title_otro">Otro</string>
    <string name="title_comentario">Comentario</string>

    <string name="title_compramedicamento">¿El cliente lleva medicamento para la mascota?</string>
    <string name="title_compramedicamentosmall">¿lleva medicamento?</string>
    <string name="title_compraisabelino">¿El cliente lleva isabelino para la mascota?</string>
    <string name="title_compraisodine">¿El cliente lleva isodine para la mascota?</string>
    <string name="title_entregademascota">¿Se ha entregado la mascota?</string>

    <string name="title_urlsheet">Teclea la URL del Sheet a descargar</string>


    <string name="button_urlsheet">Consultar</string>


    <string name="prompt_nombre">Nombre dueño mascota</string>
    <string name="prompt_nombremascota"> Nombre de la mascota </string>
    <string name="prompt_telefono"> Teléfono </string>
    <string name="prompt_direccion"> Dirección </string>
    <string name="prompt_edad"> Edad de la mascota</string>
    <string name="prompt_raza"> Raza o aproximada</string>
    <string name="prompt_tmascota">Tamaño de la mascota</string>
    <string name="prompt_tratamiento">¿Ha sido sometido a algún tratamiento la mascota?</string>
    <string name="prompt_mediosocial">Medio social por la cúal se enteró de la campaña</string>
    <string name="prompt_comentarios">Comentarios</string>
    <string name="prompt_trescatado">Tiempo que tiene que se rescató la mascota</string>
    <string name="prompt_fvacuna">Fecha que se aplicó su ultima vacuna</string>
    <string name="prompt_fdesparacitacion">Fecha que se desparacitó</string>
    <string name="prompt_fcelo">Fecha de su último celo</string>
    <string name="prompt_tlactar">¿Cuanto tiempo lleva que dejó de lactar?</string>
    <string name="prompt_correo">Correo Electrónico</string>
    <string name="prompt_dmascota">Detalles de la mascota</string>
    <string name="prompt_alergia">¿Tiene alguna alergía la mascota?</string>
    <string name="title_activity_add_new_doctor">AddNewDoctor</string>


</resources>
