<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_plus"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_buscar"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_report"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_new_doctor"
        android:title="@string/title_search" />
    <item
        android:id="@+id/load_deleted"
        android:icon="@drawable/ic_load_deleted"
        android:title="@string/title_pets" />

</menu>
