<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp">
        <AutoCompleteTextView
            android:id="@+id/dosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicamento_dosis"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/spinner"
            android:layout_alignParentStart="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Se requirió otra dosis?"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentStart="true" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout2">

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout3"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tv"
        android:layout_alignParentStart="true">

        <AutoCompleteTextView
            android:id="@+id/dosis3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner"
            android:layout_marginTop="29dp"
            android:hint="@string/medicamento_dosis2"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <AutoCompleteTextView
        android:id="@+id/dosis2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/medicamento_dosis3"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/textInputLayout3"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:text="@string/save_dosis"/>

</RelativeLayout>