<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/busqueda"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <AutoCompleteTextView
            android:id="@+id/busqueda_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/busqueda_registro"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_above="@+id/btn"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="57dp" />

    </android.support.design.widget.TextInputLayout>


    <EditText
        android:id="@+id/opero_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Médico que operó"
        android:layout_below="@+id/busqueda"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <EditText
        android:id="@+id/et"
        android:inputType="textMultiLine"
    android:lines="8"
    android:minLines="6"
    android:gravity="top|left"
    android:maxLines="10"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
        android:hint="@string/action_comments"
        android:layout_below="@+id/opero_et"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:text="@string/save_dosis"/>

</RelativeLayout>